unpackaged/main/default/objects/Account/fields/Account_AM_Portfolio_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_AM_Portfolio_Type__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Account AM Portfolio Type</label>
    <type>Checkbox</type>
</CustomField>