unpackaged/main/default/objects/Account/fields/Account_Description__c.field-meta.xml
<CustomField>
    <fullName>Account_Description__c</fullName>
    <label>Account Description</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prime</fullName>
            </value>
            <value>
                <fullName>Potential Prime</fullName>
            </value>
            <value>
                <fullName>Suboptimal</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>TestValue3</fullName>
            </value>
            <value>
                <fullName>TestDelete</fullName>
            </value>
            <value>
                <fullName>Test Value</fullName>
            </value>
            <value>
                <fullName>Core</fullName>
                <isActive>false</isActive>
                <label>Core</label>
            </value>
            <value>
                <fullName>Test Value2</fullName>
                <isActive>false</isActive>
                <label>Test Value2</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>