unpackaged/main/default/objects/Account/fields/Account_Manager_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager_Id__c</fullName>
    <formula>LEFT( Account_Manager__r.Id , 15)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Manager Id</label>
    <type>Text</type>
</CustomField>