unpackaged/main/default/objects/Account/fields/Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Status__c</fullName>
    <description>Active, Inactive and Lapsed picklist values are updated via &quot;Update Account Status Field on Account&quot; process builder. Upon creation, Account defaults to Active. Field will be read only on the page layout for end users. Users will update to Defunct or Lost via quick action buttons on Account object.  For fixed PL limited to Active and Closed - manually set</description>
    <inlineHelpText>Account Status is managed by the system except for Lost and Defunct is managed by account team members.</inlineHelpText>
    <label>Account Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Defunct</fullName>
            </value>
            <value>
                <fullName>Lapsed</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
            <value>
                <fullName>Reactivate</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>