unpackaged/main/default/objects/Account/fields/Account_Type_From_Lead__c.field-meta.xml
<CustomField>
    <fullName>Account_Type_From_Lead__c</fullName>
    <description>Account Type field, gets mapped from lead during conversion</description>
    <inlineHelpText>Account Type field, gets mapped from lead during conversion</inlineHelpText>
    <label>Account Type From Lead</label>
    <length>255</length>
    <type>Text</type>
</CustomField>