unpackaged/main/default/objects/Account/fields/Always_Roll__c.field-meta.xml
<CustomField>
    <fullName>Always_Roll__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Always Roll</label>
    <type>Checkbox</type>
</CustomField>