unpackaged/main/default/objects/Account/fields/APT_Required__c.field-meta.xml
<CustomField>
    <fullName>APT_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>APT Required</label>
    <type>Checkbox</type>
</CustomField>