unpackaged/main/default/objects/Account/fields/ARC_Region__c.field-meta.xml
<CustomField>
    <fullName>ARC_Region__c</fullName>
    <formula>Collections_Territory__r.Collection_Operation__r.sked_Territory__r.sked_Parent__r.Name</formula>
    <label>ARC Region</label>
    <type>Text</type>
</CustomField>