unpackaged/main/default/objects/Account/fields/Average_Productivity__c.field-meta.xml
<CustomField>
    <fullName>Average_Productivity__c</fullName>
    <label>Average Productivity</label>
    <precision>8</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>