unpackaged/main/default/objects/Account/fields/Average_Products__c.field-meta.xml
<CustomField>
    <fullName>Average_Products__c</fullName>
    <label>Average Products</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>