unpackaged/main/default/objects/Account/fields/BillingStreet_2__c.field-meta.xml
<CustomField>
    <fullName>BillingStreet_2__c</fullName>
    <label>Business Street 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>