unpackaged/main/default/objects/Account/fields/Business_Address_County__c.field-meta.xml
<CustomField>
    <fullName>Business_Address_County__c</fullName>
    <label>Business Address County</label>
    <length>50</length>
    <type>Text</type>
</CustomField>