unpackaged/main/default/objects/Account/fields/Business_Planning_Completed_By__c.field-meta.xml
<CustomField>
    <fullName>Business_Planning_Completed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field will be auto populated whenever the &#39;Business Planning Completed&#39; checkbox is checked with the logged in user&#39;s name</description>
    <label>Business Planning Completed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Business_Planning_Completed_By</relationshipName>
    <type>Lookup</type>
</CustomField>