unpackaged/main/default/objects/Account/fields/CFY_Drives__c.field-meta.xml
<CustomField>
    <fullName>CFY_Drives__c</fullName>
    <label>Current Fiscal Year Drives</label>
    <summaryFilterItems>
        <field>Opportunity.Drive_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>7/1/2022</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.Drive_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>6/30/2023</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>