unpackaged/main/default/objects/Account/fields/Closure_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closure_Reason__c</fullName>
    <description>Free form field for capturing account closure reason</description>
    <inlineHelpText>Free form field for capturing account closure reason</inlineHelpText>
    <label>Closure Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>