unpackaged/main/default/objects/Account/fields/Collection_Operation__c.field-meta.xml
<CustomField>
    <fullName>Collection_Operation__c</fullName>
    <formula>Collections_Territory__r.Biomed_Collection_Op_Center__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Center</label>
    <type>Text</type>
</CustomField>