unpackaged/main/default/objects/Account/fields/Collections_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Collections_Zip_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Collections Zip Code (Not in use)</label>
    <referenceTo>Collections_Territory__c</referenceTo>
    <relationshipLabel>Accounts (Collections Zip Code)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>