unpackaged/main/default/objects/Account/fields/Combined_City_and_State__c.field-meta.xml
<CustomField>
    <fullName>Combined_City_and_State__c</fullName>
    <description>Check If Billing city and state are present, if one of them is present use it, otherwise, use shipping address</description>
    <formula>IF(
    NOT(ISBLANK(BillingCity)) &amp;&amp; NOT(ISBLANK(BillingState)),
    BillingCity &amp; &quot;, &quot; &amp; BillingState,
    IF(
        NOT(ISBLANK(BillingCity)) || NOT(ISBLANK(BillingState)),
        IF(
            NOT(ISBLANK(BillingCity)),
            BillingCity,
            BillingState
        ),
        IF(
            NOT(ISBLANK(ShippingCity)) &amp;&amp; NOT(ISBLANK(ShippingState)),
            ShippingCity &amp; &quot;, &quot; &amp; ShippingState,
            IF(
                NOT(ISBLANK(ShippingCity)) || NOT(ISBLANK(ShippingState)),
                IF(
                    NOT(ISBLANK(ShippingCity)),
                    ShippingCity,
                    ShippingState
                ),
                NULL
            )
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Combined City and State</label>
    <type>Text</type>
</CustomField>