unpackaged/main/default/objects/Account/fields/Company_Size__c.field-meta.xml
<CustomField>
    <fullName>Company_Size__c</fullName>
    <description>This field is copied from the Lead converted record</description>
    <label>Company Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Less than 200</fullName>
            </value>
            <value>
                <fullName>201 - 500</fullName>
            </value>
            <value>
                <fullName>501 - 1000</fullName>
            </value>
            <value>
                <fullName>1001 - 1500</fullName>
            </value>
            <value>
                <fullName>1501 - more</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>