unpackaged/main/default/objects/Account/fields/CompanyOrganization_Comments__c.field-meta.xml
<CustomField>
    <fullName>CompanyOrganization_Comments__c</fullName>
    <label>Company/Organization Comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>