unpackaged/main/default/objects/Account/fields/Contact_BPL_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_BPL_First_Name__c</fullName>
    <formula>Contact_BPL__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact BPL First Name</label>
    <type>Text</type>
</CustomField>