unpackaged/main/default/objects/Account/fields/Created_Date_Custom__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_Custom__c</fullName>
    <label>Created Date</label>
    <type>Date</type>
</CustomField>