unpackaged/main/default/objects/Account/fields/Current_Blood_Donor__c.field-meta.xml
<CustomField>
    <fullName>Current_Blood_Donor__c</fullName>
    <description>Current Blood Donor, comes from lead object during mapping</description>
    <inlineHelpText>Current Blood Donor, comes from lead object during mapping</inlineHelpText>
    <label>Current Blood Donor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>