unpackaged/main/default/objects/Account/fields/Days_Since_Last_Drive__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Last_Drive__c</fullName>
    <formula>TODAY() - Last_Closed_Drive__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Last Drive</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>