unpackaged/main/default/objects/Account/fields/Days_Until_Next_Closed_Drive__c.field-meta.xml
<CustomField>
    <fullName>Days_Until_Next_Closed_Drive__c</fullName>
    <formula>Next_Closed_Drive__c   -  TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Until Next Closed Drive</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>