unpackaged/main/default/objects/Account/fields/Defunct_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Defunct_Effective_Date__c</fullName>
    <description>When the Account Status field is updated to &quot;Defunct&quot; or &quot;Lost,&quot; this field should auto-populate with that day&#39;s date. Workflow will populate.</description>
    <inlineHelpText>Based on date Account moved to Defunct Status</inlineHelpText>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>