unpackaged/main/default/objects/Account/fields/District__c.field-meta.xml
<CustomField>
    <fullName>District__c</fullName>
    <formula>Collections_Territory__r.District__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>District</label>
    <type>Text</type>
</CustomField>