unpackaged/main/default/objects/Account/fields/District_Manager__c.field-meta.xml
<CustomField>
    <fullName>District_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>District Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>