unpackaged/main/default/objects/Account/fields/District_Manager_Portfolio__c.field-meta.xml
<CustomField>
    <fullName>District_Manager_Portfolio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>District Manager Portfolio</label>
    <referenceTo>BSF_Portfolio__c</referenceTo>
    <relationshipLabel>Accounts (District Manager Portfolio)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>