unpackaged/main/default/objects/Account/fields/Do_Not_Roll__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Roll__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Roll</label>
    <type>Checkbox</type>
</CustomField>