unpackaged/main/default/objects/Account/fields/DRD_Territory_ID__c.field-meta.xml
<CustomField>
    <fullName>DRD_Territory_ID__c</fullName>
    <formula>Collections_Territory__r.DRD_Territory2__r.DRD_Territory_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DRD Territory ID</label>
    <type>Text</type>
</CustomField>