unpackaged/main/default/objects/Account/fields/DS_Region__c.field-meta.xml
<CustomField>
    <fullName>DS_Region__c</fullName>
    <formula>Collections_Territory__r.Region__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DS Region</label>
    <type>Text</type>
</CustomField>