unpackaged/main/default/objects/Account/fields/Earliest_Drive_Date__c.field-meta.xml
<CustomField>
    <fullName>Earliest_Drive_Date__c</fullName>
    <description>This will be having the earliest date from closed opportunities</description>
    <label>Earliest Drive Date</label>
    <type>Date</type>
</CustomField>