unpackaged/main/default/objects/Account/fields/Exclude_from_sponsor_direct_marketing__c.field-meta.xml
<CustomField>
    <fullName>Exclude_from_sponsor_direct_marketing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude from Sponsor Direct Marketing</label>
    <type>Checkbox</type>
</CustomField>