unpackaged/main/default/objects/Account/fields/Existing_Relationship_with_HS__c.field-meta.xml
<CustomField>
    <fullName>Existing_Relationship_with_HS__c</fullName>
    <label>Existing Relationship with HS</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>