unpackaged/main/default/objects/Account/fields/Gearset_Demo_Field_for_BSF__c.field-meta.xml
<CustomField>
    <fullName>Gearset_Demo_Field_for_BSF__c</fullName>
    <description>Gearset Demo Field for BSF</description>
    <label>Gearset Demo Field for BSF</label>
    <length>25</length>
    <type>Text</type>
</CustomField>