unpackaged/main/default/objects/Account/fields/Gray_Sky_Account__c.field-meta.xml
<CustomField>
    <fullName>Gray_Sky_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Gray Sky Account Sponsor have the opportunity to add a drive outside of their normal annual program to help during critical times (i.e. appeal, disaster, critical booking weeks)</description>
    <label>Gray Sky Account</label>
    <type>Checkbox</type>
</CustomField>