unpackaged/main/default/objects/Account/fields/Has_Personal_Story__c.field-meta.xml
<CustomField>
    <fullName>Has_Personal_Story__c</fullName>
    <description>Indicates the lead has a personal story for wanting to host a drive.</description>
    <label>Has Personal Story</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>