unpackaged/main/default/objects/Account/fields/Have_you_received_assistance_from_HS__c.field-meta.xml
<CustomField>
    <fullName>Have_you_received_assistance_from_HS__c</fullName>
    <label>Have you received assistance from HS</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>