unpackaged/main/default/objects/Account/fields/Hosted_Before__c.field-meta.xml
<CustomField>
    <fullName>Hosted_Before__c</fullName>
    <description>Has the organization ever sponsored a blood drive before?</description>
    <label>Hosted Before</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Sure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>