unpackaged/main/default/objects/Account/fields/HS_Chapter__c.field-meta.xml
<CustomField>
    <fullName>HS_Chapter__c</fullName>
    <formula>Collections_Territory__r.HS_Chapter__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Humanitarian Chapter</label>
    <type>Text</type>
</CustomField>