unpackaged/main/default/objects/Account/fields/Initial_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Initial_Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Initial Reviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Initial_Reviewer_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>