unpackaged/main/default/objects/Account/fields/IsPremierCurrent__c.field-meta.xml
<CustomField>
    <fullName>IsPremierCurrent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Premier Current</label>
    <type>Checkbox</type>
</CustomField>