unpackaged/main/default/objects/Account/fields/IsPumpedItUpCurrent__c.field-meta.xml
<CustomField>
    <fullName>IsPumpedItUpCurrent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Pumped It Up Current</label>
    <type>Checkbox</type>
</CustomField>