unpackaged/main/default/objects/Account/fields/Last_Follow_Up_Drive__c.field-meta.xml
<CustomField>
    <fullName>Last_Follow_Up_Drive__c</fullName>
    <label>Last Follow Up Drive</label>
    <summarizedField>Opportunity.Drive_Date__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Follow Up</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>