unpackaged/main/default/objects/Account/fields/Lead_Rating_Stars__c.field-meta.xml
<CustomField>
    <fullName>Lead_Rating_Stars__c</fullName>
    <description>Part of HRP-12459</description>
    <formula>IMAGE(
CASE( FLOOR(Lead_Score__c/10),
10, &quot;/img/samples/stars_500.gif&quot;,
9, &quot;/img/samples/stars_500.gif&quot;,
8, &quot;/img/samples/stars_400.gif&quot;,
7, &quot;/img/samples/stars_400.gif&quot;,
6, &quot;/img/samples/stars_300.gif&quot;,
5, &quot;/img/samples/stars_300.gif&quot;,
4, &quot;/img/samples/stars_200.gif&quot;,
3, &quot;/img/samples/stars_200.gif&quot;,
2, &quot;/img/samples/stars_100.gif&quot;,
1, &quot;/img/samples/stars_100.gif&quot;,
&quot;/img/samples/stars_000.gif&quot;
),
&quot;Rating&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Rating Stars</label>
    <type>Text</type>
</CustomField>