unpackaged/main/default/objects/Account/fields/Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>Lost_Reason__c</fullName>
    <description>Dependent field of &quot;Account Status&quot; when Lost is chosen as the picklist value. Require a value to be selected if &quot;Lost&quot; is selected.</description>
    <label>Lost Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lost to Competition</fullName>
            </value>
            <value>
                <fullName>Red Cross Decision (Do Not Run)</fullName>
            </value>
            <value>
                <fullName>Sponsor Decision</fullName>
            </value>
            <value>
                <fullName>BPL Loss</fullName>
            </value>
            <value>
                <fullName>Market Optimization</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>