unpackaged/main/default/objects/Account/fields/Mailing_Address_County__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Address_County__c</fullName>
    <label>Mailing Address County</label>
    <length>50</length>
    <type>Text</type>
</CustomField>