unpackaged/main/default/objects/Account/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <description>This field capture the value as a combination Zip code + Market from custom object Market Mapping</description>
    <label>Market</label>
    <length>255</length>
    <type>Text</type>
</CustomField>