unpackaged/main/default/objects/Account/fields/Marketing_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Strategy__c</fullName>
    <label>Marketing Strategy</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Diversity African American</fullName>
                <label>Diversity - African American</label>
            </value>
            <value>
                <fullName>Diversity - Asian</fullName>
            </value>
            <value>
                <fullName>Diversity - Hispanic</fullName>
            </value>
            <value>
                <fullName>RSMO</fullName>
            </value>
            <value>
                <fullName>RSMO - Monthly</fullName>
            </value>
            <value>
                <fullName>Amish Drive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>