unpackaged/main/default/objects/Account/fields/Migration_ID__c.field-meta.xml
<CustomField>
    <fullName>Migration_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Only being utilized for Migration of data from Hemasphere to SF</description>
    <externalId>true</externalId>
    <label>Migration ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>