unpackaged/main/default/objects/Account/fields/Most_Recent_Closed_Drive__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Closed_Drive__c</fullName>
    <label>Most Recent Closed Drive</label>
    <summarizedField>Opportunity.Drive_Date__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>