unpackaged/main/default/objects/Account/fields/National_Name_Initial_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>National_Name_Initial_Review_Date__c</fullName>
    <description>when National name status becomes Second Review Pending, this field is populated</description>
    <label>National Name Initial Review Date</label>
    <type>Date</type>
</CustomField>