unpackaged/main/default/objects/Account/fields/National_Name_Second_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>National_Name_Second_Review_Date__c</fullName>
    <description>this will be populated when National Name status becomes Review Completed</description>
    <label>National Name Second Review Date</label>
    <type>Date</type>
</CustomField>