unpackaged/main/default/objects/Account/fields/Next_Draft_Drive__c.field-meta.xml
<CustomField>
    <fullName>Next_Draft_Drive__c</fullName>
    <description>Date of upcoming Opportunity in the Discovery stage. Kept original API name of Next_Draft_Drive__c</description>
    <label>Next Discovery Drive</label>
    <summarizedField>Opportunity.Drive_Date__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Discovery</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>