unpackaged/main/default/objects/Account/fields/Next_Scheduled_Drive__c.field-meta.xml
<CustomField>
    <fullName>Next_Scheduled_Drive__c</fullName>
    <description>Number of days until the next drive on the production calendar in the Discovery, Solicited, Committed or Closed opportunity stage.</description>
    <label>Next Scheduled Drive</label>
    <summarizedField>Opportunity.Drive_Date__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.Drive_Status__c</field>
        <operation>equals</operation>
        <value>System Generated, Tentative, Confirmed</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>