unpackaged/main/default/objects/Account/fields/Potential_Partnership_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Potential_Partnership_Reasons__c</fullName>
    <label>Potential Partnership Reasons</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>