unpackaged/main/default/objects/Account/fields/Ready_for_National_Name_Review__c.field-meta.xml
<CustomField>
    <fullName>Ready_for_National_Name_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ready for National Name Review</label>
    <type>Checkbox</type>
</CustomField>